Prettify and fix css spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,6 @@ a:hover {
 }
 
 .quiz {
-    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -125,7 +124,7 @@ h2 {
     position: relative;
     font-size: 22px;
     cursor: pointer;
-    transition: ease-in-out, width .35s ease-in-out;
+    transition: ease-in-out, width 0.35s ease-in-out;
 }
 
 .answer.selected {
